# eilmeldung

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  release.toml
.github/workflows/: build-and-release.yml  build-main.yml  release.yml
HomebrewFormula/: eilmeldung.rb  update-sha.sh
ScoopBucket/: eilmeldung.json  update-sha.sh
docs/: commands.md  configuration.md  faq.md  installation.md  llms.txt  migration-guides.md  pipe.md
docs/examples/: freshrss_secrets_windows.md
examples/: default-config.toml
scripts/: build-windows.ps1  install-windows.ps1
src/: newsflash_utils.rs
src/config/: border_theme.rs  icon_set.rs  mod.rs
src/input/: mod.rs
src/messages/: event.rs
src/messages/command/: mod.rs  parse.rs
src/ui/: mouse.rs  view.rs
src/ui/article_content/: mod.rs  model.rs  view.rs
src/ui/articles_list/: mod.rs  view.rs
src/ui/command_input/: mod.rs
src/ui/feeds_list/: mod.rs  view.rs
src/ui/help_popup/: mod.rs
src/utils/: mod.rs
